force-app/main/default/objects/Order/fields/Account_Entit_BW__c.field-meta.xml
<CustomField>
    <fullName>Account_Entit_BW__c</fullName>
    <description>TEXT(Account.ACC_Entite_BW__c) Formule d&apos;origine</description>
    <formula>Quote.DEV_EntiteBW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Entité BW</label>
    <type>Text</type>
</CustomField>