force-app/main/default/objects/Order/fields/Equipements_crees__c.field-meta.xml
<CustomField>
    <fullName>Equipements_crees__c</fullName>
    <formula>IF(  Nbre_Equipement_restant_a_creer__c   = 0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cette case à cocher permet de signaler que vous avez créé l&apos; (tous les) équipement(s) lié(s) à cette commande.</inlineHelpText>
    <label>Equipement(s) créé(s)</label>
    <type>Checkbox</type>
</CustomField>