force-app/main/default/objects/Order/fields/Nbre_Equipement_restant_a_creer__c.field-meta.xml
<CustomField>
    <fullName>Nbre_Equipement_restant_a_creer__c</fullName>
    <label>Nbre Equipement restant a créer</label>
    <summarizedField>OrderItem.Nbre_Equipement_restant_a_cr_er__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>