force-app/main/default/objects/Order/fields/ORD_Agence_Regionale_BW__c.field-meta.xml
<CustomField>
    <fullName>ORD_Agence_Regionale_BW__c</fullName>
    <label>Agence Régionale BW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AgenceRegionaleBW</valueSetName>
    </valueSet>
</CustomField>