force-app/main/default/objects/Order/fields/ORD_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>ORD_BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>Chaudières</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Traitement de l&apos;eau</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Air</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Services</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Location</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>INCINEX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>