force-app/main/default/objects/Order/fields/ORD_ClientLivre__c.field-meta.xml
<CustomField>
    <fullName>ORD_ClientLivre__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte livré</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commandes</relationshipLabel>
    <relationshipName>Commandes</relationshipName>
    <type>Lookup</type>
</CustomField>