force-app/main/default/objects/Order/fields/ORD_Code_Agence_Regionale_BW__c.field-meta.xml
<CustomField>
    <fullName>ORD_Code_Agence_Regionale_BW__c</fullName>
    <label>Code Agence Régionale BW</label>
    <length>10</length>
    <type>Text</type>
</CustomField>