force-app/main/default/objects/Order/fields/ORD_Code_Secteur_Commercial__c.field-meta.xml
<CustomField>
    <fullName>ORD_Code_Secteur_Commercial__c</fullName>
    <label>Code Secteur Commercial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>