force-app/main/default/objects/Order/fields/ORD_CompteFacture__c.field-meta.xml
<CustomField>
    <fullName>ORD_CompteFacture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Facturé</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commandes (Compte Facturé)</relationshipLabel>
    <relationshipName>Commandes1</relationshipName>
    <type>Lookup</type>
</CustomField>