force-app/main/default/objects/Order/fields/ORD_CreancesEchues__c.field-meta.xml
<CustomField>
    <fullName>ORD_CreancesEchues__c</fullName>
    <formula>ORD_CompteFacture__r.ACC_CreancesEchues__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ce champ reprend les créances échues du Compte Facturé.</inlineHelpText>
    <label>Créances échues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>