force-app/main/default/objects/Order/fields/ORD_DateDeFacturation__c.field-meta.xml
<CustomField>
    <fullName>ORD_DateDeFacturation__c</fullName>
    <label>Date de facturation</label>
    <type>Date</type>
</CustomField>