force-app/main/default/objects/Order/fields/ORD_DateDeFermetureDeLAffaire__c.field-meta.xml
<CustomField>
    <fullName>ORD_DateDeFermetureDeLAffaire__c</fullName>
    <label>Date de fermeture de l&apos;affaire</label>
    <type>Date</type>
</CustomField>