force-app/main/default/objects/Order/fields/ORD_DateDInterventionPlanifiee__c.field-meta.xml
<CustomField>
    <fullName>ORD_DateDInterventionPlanifiee__c</fullName>
    <label>Date d&apos;intervention prévisionnelle</label>
    <type>Date</type>
</CustomField>