force-app/main/default/objects/Order/fields/ORD_DateEcheanceDePaiement__c.field-meta.xml
<CustomField>
    <fullName>ORD_DateEcheanceDePaiement__c</fullName>
    <inlineHelpText>Date d&apos;échéance de paiement / de règlement</inlineHelpText>
    <label>Date d&apos;échéance de paiement</label>
    <type>Date</type>
</CustomField>