force-app/main/default/objects/Order/fields/ORD_DateEncaissement__c.field-meta.xml
<CustomField>
    <fullName>ORD_DateEncaissement__c</fullName>
    <label>Date d&apos;encaissement / Règlement réel</label>
    <type>Date</type>
</CustomField>