force-app/main/default/objects/Order/fields/ORD_DateReelleExecutionLivraison__c.field-meta.xml
<CustomField>
    <fullName>ORD_DateReelleExecutionLivraison__c</fullName>
    <label>Date réelle d&apos;execution / Livraison</label>
    <type>Date</type>
</CustomField>