force-app/main/default/objects/Order/fields/ORD_Description_complementaire__c.field-meta.xml
<CustomField>
    <fullName>ORD_Description_complementaire__c</fullName>
    <label>Description complémentaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>