force-app/main/default/objects/Order/fields/Ord_Domaine__c.field-meta.xml
<CustomField>
    <fullName>Ord_Domaine__c</fullName>
    <label>Code Business Unit</label>
    <length>150</length>
    <type>Text</type>
</CustomField>