force-app/main/default/objects/Order/fields/ORD_DonneesDAffaire__c.field-meta.xml
<CustomField>
    <fullName>ORD_DonneesDAffaire__c</fullName>
    <label>Données d&apos;affaire</label>
    <length>30</length>
    <type>Text</type>
</CustomField>