force-app/main/default/objects/Order/fields/ORD_EquipementCree__c.field-meta.xml
<CustomField>
    <fullName>ORD_EquipementCree__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cette case à cocher permet de signaler que vous avez créé un équipement lié à cette commande.</inlineHelpText>
    <label>Equipement créé</label>
    <type>Checkbox</type>
</CustomField>