force-app/main/default/objects/Order/fields/ORD_InterventionCree__c.field-meta.xml
<CustomField>
    <fullName>ORD_InterventionCree__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cette case à cocher permet de signaler que vous avez créé une intervention liée à cette commande.</inlineHelpText>
    <label>Intervention créée</label>
    <type>Checkbox</type>
</CustomField>