force-app/main/default/objects/Order/fields/ORD_MontantERP__c.field-meta.xml
<CustomField>
    <fullName>ORD_MontantERP__c</fullName>
    <label>Montant TTC ERP</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>