force-app/main/default/objects/Order/fields/ORD_MontantHT_ERP__c.field-meta.xml
<CustomField>
    <fullName>ORD_MontantHT_ERP__c</fullName>
    <label>Montant HT ERP</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>