force-app/main/default/objects/Order/fields/ORD_NbLigneDeCommandes__c.field-meta.xml
<CustomField>
    <fullName>ORD_NbLigneDeCommandes__c</fullName>
    <label>Nb Ligne de commandes</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>