force-app/main/default/objects/Order/fields/ORD_ReferenceCommande__c.field-meta.xml
<CustomField>
    <fullName>ORD_ReferenceCommande__c</fullName>
    <externalId>true</externalId>
    <label>Numéro de commande BW (Référence ERP)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>