force-app/main/default/objects/Order/fields/ORD_RequeteLiee__c.field-meta.xml
<CustomField>
    <fullName>ORD_RequeteLiee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requête Liée</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>