force-app/main/default/objects/Order/fields/ORD_Secteur_Commercial__c.field-meta.xml
<CustomField>
    <fullName>ORD_Secteur_Commercial__c</fullName>
    <label>Secteur Commercial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ORD_Agence_Regionale_BW__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SecteurCommercial</valueSetName>
    </valueSet>
</CustomField>