force-app/main/default/objects/Order/fields/ORD_URL__c.field-meta.xml
<CustomField>
    <fullName>ORD_URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>