force-app/main/default/objects/Order/fields/ord_visSousDomain__c.field-meta.xml
<CustomField>
    <fullName>ord_visSousDomain__c</fullName>
    <label>Code Sous Domaine</label>
    <length>150</length>
    <type>Text</type>
</CustomField>