force-app/main/default/objects/Order/fields/ORD_VolumeDHeuresDIntervention__c.field-meta.xml
<CustomField>
    <fullName>ORD_VolumeDHeuresDIntervention__c</fullName>
    <label>Volume d&apos;heures d&apos;intervention</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>