force-app/main/default/objects/Order/fields/TECH_INTEGREE_PRIME_TE__c.field-meta.xml
<CustomField>
    <fullName>TECH_INTEGREE_PRIME_TE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_INTEGREE_PRIME_TE</label>
    <type>Checkbox</type>
</CustomField>