force-app/main/default/objects/Order/fields/TECH_PERIMETRE_PRIME_TE__c.field-meta.xml
<CustomField>
    <fullName>TECH_PERIMETRE_PRIME_TE__c</fullName>
    <formula>IF( TEXT(ORD_SousDomaine__c) = $Label.PRO , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_PERIMETRE_PRIME_TE</label>
    <type>Checkbox</type>
</CustomField>