force-app/main/default/objects/Order/fields/TECH_PERIODE_PRIME_TE__c.field-meta.xml
<CustomField>
    <fullName>TECH_PERIODE_PRIME_TE__c</fullName>
    <formula>TEXT(YEAR( EffectiveDate ))
&amp;&apos;-&apos;&amp;
case(
     TEXT(MONTH( EffectiveDate ))
     ,&apos;1&apos; ,&apos;01&apos;
     ,&apos;2&apos; ,&apos;02&apos;
     ,&apos;3&apos; ,&apos;03&apos;     
     ,&apos;4&apos; ,&apos;04&apos;     
     ,&apos;5&apos; ,&apos;05&apos;     
     ,&apos;6&apos; ,&apos;06&apos;
     ,&apos;7&apos; ,&apos;07&apos;     
     ,&apos;8&apos; ,&apos;08&apos;     
     ,&apos;9&apos; ,&apos;09&apos;     
     ,&apos;10&apos;,&apos;10&apos;     
     ,&apos;11&apos;,&apos;11&apos;     
     ,&apos;12&apos;,&apos;12&apos;
     ,&apos;00&apos;
     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_PERIODE_PRIME_TE</label>
    <type>Text</type>
</CustomField>