force-app/main/default/objects/Order/validationRules/RV10_NUM_CDE_CLIENT_MAX_45_CAR.validationRule-meta.xml
<ValidationRule>
    <fullName>RV10_NUM_CDE_CLIENT_MAX_45_CAR</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( PoNumber ) &gt; 45</errorConditionFormula>
    <errorDisplayField>PoNumber</errorDisplayField>
    <errorMessage>Le numéro de commande client ne peut pas dépasser 45 caractères</errorMessage>
</ValidationRule>