force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>ORD_ReferenceCommande__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORD_ClientLivre__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORD_MontantHT_ERP__c</columns>
    <columns>ORD_MontantERP__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORD_BusinessUnit__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les commandes</label>
</ListView>