force-app/main/default/objects/Order/listViews/BWF_Commandes_de_la_veille_par_SDom.listView-meta.xml
<ListView>
    <fullName>BWF_Commandes_de_la_veille_par_SDom</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORD_ReferenceCommande__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORD_MontantHT_ERP__c</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>Account_Entit_BW__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>BWF_Commandes de la veille par SDom</label>
</ListView>