force-app/main/default/objects/Order/listViews/BWI_Orders_of_the_day.listView-meta.xml
<ListView>
    <fullName>BWI_Orders_of_the_day</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORD_ReferenceCommande__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORD_BusinessUnit__c</columns>
    <columns>ORD_SousDomaine__c</columns>
    <columns>ORD_NbLigneDeCommandes__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORD_MontantHT_ERP__c</columns>
    <columns>ORDER.SHIPPING_CITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Account_Entit_BW__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>BWI_Orders of the day</label>
    <language>it</language>
</ListView>