force-app/main/default/objects/Order/listViews/Commandes_Chaudi_res_TDF.listView-meta.xml
<ListView>
    <fullName>Commandes_Chaudi_res_TDF</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORD_ReferenceCommande__c</columns>
    <columns>ORD_SousDomaine__c</columns>
    <columns>ORD_MontantHT_ERP__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORD_EquipementCree__c</columns>
    <columns>ORD_InterventionCree__c</columns>
    <columns>ORD_DonneesDAffaire__c</columns>
    <columns>ORDER.SHIPPING_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORD_BusinessUnit__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>01 - Commandes Chaudières</label>
</ListView>