force-app/main/default/objects/Order/listViews/Commandes_du_jours_par_SDom.listView-meta.xml
<ListView>
    <fullName>Commandes_du_jours_par_SDom</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORD_ReferenceCommande__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORD_MontantHT_ERP__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORD_SousDomaine__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Commandes du jour par SDom</label>
</ListView>