force-app/main/default/objects/Order/listViews/CommandesDeLaSemaine.listView-meta.xml
<ListView>
    <fullName>CommandesDeLaSemaine</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACTIVATEDBY_USER.ALIAS</field>
        <operation>greaterThan</operation>
        <value>TODAY() + 15</value>
    </filters>
    <label>Commandes de la semaine</label>
</ListView>