force-app/main/default/objects/Order/listViews/CommandesPortail.listView-meta.xml
<ListView>
    <fullName>CommandesPortail</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Mes commandes (Portail Client)</label>
</ListView>