force-app/main/default/objects/Order/listViews/Copie_de_01_Commandes_Chaudi_res_TDF.listView-meta.xml
<ListView>
    <fullName>Copie_de_01_Commandes_Chaudi_res_TDF</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORD_ReferenceCommande__c</columns>
    <columns>ORD_SousDomaine__c</columns>
    <columns>ORD_MontantHT_ERP__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORD_EquipementCree__c</columns>
    <columns>ORD_InterventionCree__c</columns>
    <columns>ORD_DonneesDAffaire__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORD_SousDomaine__c</field>
        <operation>equals</operation>
        <value>15,17,34,51,52</value>
    </filters>
    <label>02 - Commandes Chaudières Mat Thermique</label>
</ListView>