force-app/main/default/objects/Order/listViews/X03_Commandes_TA.listView-meta.xml
<ListView>
    <fullName>X03_Commandes_TA</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDER.SHIPPING_ZIP</columns>
    <columns>ORD_ReferenceCommande__c</columns>
    <columns>ORD_SousDomaine__c</columns>
    <columns>ORD_MontantHT_ERP__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORD_EquipementCree__c</columns>
    <columns>ORD_InterventionCree__c</columns>
    <columns>ORD_DonneesDAffaire__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORD_SousDomaine__c</field>
        <operation>equals</operation>
        <value>2,4,5,13,14,30,37</value>
    </filters>
    <label>03 - Commandes TA</label>
</ListView>