force-app/main/default/objects/Order/listViews/X04_Commandes_TE.listView-meta.xml
<ListView>
    <fullName>X04_Commandes_TE</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORD_ReferenceCommande__c</columns>
    <columns>ORD_SousDomaine__c</columns>
    <columns>ORD_MontantHT_ERP__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORD_EquipementCree__c</columns>
    <columns>ORD_InterventionCree__c</columns>
    <columns>ORD_DonneesDAffaire__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORD_SousDomaine__c</field>
        <operation>equals</operation>
        <value>1,6,7,8,17,22,23,24,27,32,53,39</value>
    </filters>
    <label>04 - Commandes TE</label>
</ListView>